# avideo-dl

./: .gitignore  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
avideo_dl/: AVideoDownloader.py  __init__.py  aa.py  downloader.py  extractor.py  utils.py
avideo_dl/extractor/: __init__.py  base.py  fc2.py  pornhub.py  redtube.py  share_videos.py  tube8.py  xhamster.py  xvideos.py
avideo_dl/extractor/modules/: _pornhub.py  fc2.py  redtube.py  tube8.py  xvideos.py
avideo_dl/scripts/: command.py
tests/: test_download.py
