[tool.poetry]
name = "avideo_dl"
version = "0.1.1"
description = "Fast adult video downloader with no dependent third party libraries."
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ksk001100/avideo-dl"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
avideo_dl = 'avideo_dl.scripts.command:main'
