[metadata]
name = avideo-dl
version = 0.0.3
description = Fast adult video downloader with no dependent third party libraries.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/KeisukeToyota/avideo_dl
author = KeisukeToyota
author_email = hm.pudding0715@gmail.com
maintainer = KeisukeToyota
maintainer_email = hm.pudding0715@gmail.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    avideo_dl = avideo_dl.scripts.command:main
